# SOEL

./: .gitignore  .soelrc.example  CLAUDE.md  LICENSE  README.md  SPEC.md  package-lock.json  package.json  soel.cabal
examples/: calculator.hs  calculator.soel  ecommerce.hs  ecommerce.soel  hello-world.hs  hello-world.soel  todo-list.hs  todo-list.soel
hs/app/: Main.hs
hs/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hs/dist-newstyle/packagedb/ghc-9.6.7/: package.cache  soel-0.1.0-inplace-soel-lib.conf
hs/src/Soel/: Config.hs  Types.hs
hs/src/Soel/Cache/: Store.hs
hs/src/Soel/IR/: Transform.hs  Types.hs  Validate.hs
hs/src/Soel/LLM/: Prompts.hs
hs/src/Soel/Stages/: AmbiguityDetector.hs  Dialog.hs  GHC.hs  SemanticEncoder.hs  Writer.hs
hs/src/Soel/Utils/: Errors.hs  Logger.hs
prompts/: ambiguity-resolver.md  codegen-haskell.md  ir-transform.md  pragmatic-repair.md  semantic-encoder-fast.md  semantic-encoder-full.md
src/: config.ts  index.ts  pipeline.ts
src/Soel/: Pipeline.hs
src/Soel/LLM/: OpenRouter.hs  Prompts.hs
src/Soel/Stages/: Codegen.hs  Reader.hs  Repair.hs
src/cache/: store.ts
src/ir/: transform.ts  types.ts  validate.ts
src/llm/: openrouter.ts  prompts.ts
src/stages/: ambiguity-detector.ts  codegen.ts  dialog.ts  ghc.ts  reader.ts  repair.ts  semantic-encoder.ts  writer.ts
src/utils/: errors.ts  logger.ts
